Fix minor layout bugs.

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -15,5 +15,5 @@
 }
 
 article.post {
-  margin: 30px 0;
+  margin: 40px 0;
 }
